@@ -138,6 +138,32 @@ Makefile and Batchfile creation options
 .. versionadded:: 1.3
    Add various options for sphinx-quickstart invocation.
 
+Project templating
+------------------
+
+.. option:: -t, --templatedir=TEMPLATEDIR
+
+   Template directory for template files.  You can modify the templates of
+   sphinx project files generated by quickstart.  Following Jinja2 template
+   files are allowed:
+
+   * master_doc.rst_t
+   * conf.py_t
+   * Makefile_t
+   * Makefile.new_t
+   * make.bat_t
+   * make.bat.new_t
+
+   In detail, please refer the system template files Sphinx provides.
+   (sphinx/templates/quickstart)
+
+.. option:: -d NAME=VALUE
+
+   Define a template variable
+
+.. versionadded:: 1.5
+   Project templating options for sphinx-quickstart
+
 
 Invocation of sphinx-build
 ==========================
