@@ -18,6 +18,8 @@ Features added
   LaTeX style file ``geometry.sty`` to set page layout
 * #2843: Add :start-at: and :end-at: options to literalinclude directive
 * #2527: Add ``:reversed:`` option to toctree directive
+* Add ``-t`` and ``-d`` option to ``sphinx-quickstart`` to support templating
+  generated sphinx project.
 
 Bugs fixed
 ----------
